k8s/core/forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: lilnas-core
  labels:
    app: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 4181
      targetPort: 4181
      protocol: TCP
